sync and bug fix

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,7 +12,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:textColor="#6d5b97"
+        android:textColor="@color/colorPrimary"
         android:textSize="60sp"
         android:layout_marginBottom="80dp"
         android:text="@string/title" />
@@ -26,29 +26,14 @@
             android:layout_height="wrap_content" >
 
             <EditText
-                android:id="@+id/editText_id"
+                android:id="@+id/editText_phone"
                 android:layout_width="250dp"
                 android:layout_height="wrap_content"
                 android:layout_span="2"
-                android:inputType="textPersonName"
+                android:inputType="phone"
                 android:textSize="20sp"
-                android:hint="아이디"/>
+                android:hint="전화번호"/>
 
-
-        </TableRow>
-
-        <TableRow
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" >
-
-            <EditText
-                android:id="@+id/editText_pw"
-                android:layout_width="250dp"
-                android:layout_height="wrap_content"
-                android:layout_span="2"
-                android:textSize="20sp"
-                android:inputType="textPassword"
-                android:hint="비밀번호"/>
 
         </TableRow>
 
@@ -59,21 +44,20 @@
 
             <Button
                 android:id="@+id/button_signin"
-                android:layout_width="wrap_content"
+                android:layout_width="100dp"
                 android:layout_height="wrap_content"
-                android:backgroundTint="#6d5b97"
+                android:backgroundTint="@color/colorPrimary"
                 android:textColor="#ffffff"
                 android:textSize="17sp"
                 android:text="로그인" />
 
             <Button
                 android:id="@+id/button_signup"
-                android:layout_width="wrap_content"
+                android:layout_width="100dp"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="5dp"
-                android:backgroundTint="#6d5b97"
-                android:textSize="17sp"
+                android:backgroundTint="@color/colorPrimary"
                 android:textColor="#ffffff"
+                android:textSize="17sp"
                 android:text="회원가입" />
 
         </TableRow>
