--- a/app/src/main/res/layout/dialog_phoneauth.xml
+++ b/app/src/main/res/layout/dialog_phoneauth.xml
@@ -4,19 +4,21 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:padding="10dp">
+    android:padding="20dp">
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="인증 코드를 입력 하세요"
+        android:text="인증 코드를 입력해주세요"
         android:id="@+id/textView" />
 
     <EditText
         android:id="@+id/edittext"
-        android:layout_width="fill_parent"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="코드.."
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp"
         android:padding="10dp" />
 </LinearLayout>
