--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -1,207 +1,75 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="#f2f2f2"
-    android:gravity="center_horizontal">
+    android:gravity="center"
+    android:background="#ffffff">
 
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="100dp"
-        android:background="#6d5b97">
+    <TableLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
 
-        <TextView
-            android:id="@+id/textView33"
+        <TableRow
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" >
+
+            <EditText
+                android:id="@+id/editText_phone"
+                android:layout_width="200dp"
+                android:layout_height="wrap_content"
+                android:enabled="false"
+                android:layout_span="1"
+                android:inputType="phone"
+                android:textSize="20sp"
+                android:hint="전화번호"/>
+
+            <Button
+                android:id="@+id/button_phone_auth"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_span="1"
+                android:backgroundTint="@color/colorPrimary"
+                android:textColor="#ffffff"
+                android:textSize="17sp"
+                android:text="본인인증" />
+
+
+        </TableRow>
+
+        <TableRow
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" >
+
+            <EditText
+                android:id="@+id/editText_company"
+                android:layout_width="200dp"
+                android:layout_height="wrap_content"
+                android:layout_span="1"
+                android:textSize="20sp"
+                android:inputType="text"
+                android:hint="버스회사"/>
+
+        </TableRow>
+
+        <TableRow
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_centerHorizontal="true"
-            android:layout_marginBottom="20dp"
-            android:text="회원가입"
-            android:textColor="#ffffff"
-            android:textSize="30sp" />
+            android:layout_marginTop="5dp">
 
-        <TextView
-            android:id="@+id/text_submit"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentRight="true"
-            android:layout_marginBottom="24dp"
-            android:layout_marginEnd="20dp"
-            android:layout_marginRight="20dp"
-            android:text="완료"
-            android:textColor="#ffffff"
-            android:textSize="20sp" />
-    </RelativeLayout>
+            <Button
+                android:id="@+id/button_signup_complete"
+                android:layout_width="200dp"
+                android:layout_height="wrap_content"
+                android:layout_span="2"
+                android:backgroundTint="@color/colorPrimary"
+                android:textColor="#ffffff"
+                android:textSize="17sp"
+                android:text="완료" />
 
-    <TextView
-        android:id="@+id/textView5"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="#aa6d5b97"
-        android:gravity="center"
-        android:paddingBottom="5dp"
-        android:paddingTop="5dp"
-        android:text="본인인증은 세 가지 중 하나로 인증해주세요"
-        android:textColor="#ffffff"
-        android:textSize="15sp" />
+        </TableRow>
 
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical" >
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="vertical"
-                android:gravity="center"
-                android:background="#ffffff"
-                android:layout_marginBottom="10dp"
-                android:focusable="true"
-                android:focusableInTouchMode="true">
-
-                <TextView
-                    android:id="@+id/textView2"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="left"
-                    android:layout_marginBottom="25dp"
-                    android:layout_marginTop="15dp"
-                    android:layout_marginLeft="15dp"
-                    android:textSize="20sp"
-                    android:text="기본정보" />
-
-                <TableLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="40dp">
-
-                    <TableRow
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent" >
-
-                        <EditText
-                            android:id="@+id/editText_id"
-                            android:layout_width="160dp"
-                            android:layout_height="wrap_content"
-                            android:textSize="20sp"
-                            android:layout_marginTop="5dp"
-                            android:inputType="textPersonName"
-                            android:hint="아이디"/>
-
-                        <Button
-                            android:id="@+id/button_idcheck"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:textSize="17sp"
-                            android:layout_marginLeft="10dp"
-                            android:backgroundTint="#6d5b97"
-                            android:textColor="#ffffff"
-                            android:text="중복확인" />
-
-                    </TableRow>
-
-                    <TableRow
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent" >
-
-                        <EditText
-                            android:id="@+id/editText_pw"
-                            android:layout_width="160dp"
-                            android:layout_height="wrap_content"
-                            android:textSize="20sp"
-                            android:layout_marginTop="5dp"
-                            android:inputType="textPassword"
-                            android:hint="비밀번호"/>
-
-                    </TableRow>
-
-                </TableLayout>
-
-            </LinearLayout>
-
-            <FrameLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-
-                <LinearLayout
-                    android:id="@+id/AuthComplete"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:background="#ffffff"
-                    android:orientation="vertical"
-                    android:gravity="center">
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="본인인증이 완료되었습니다"
-                        android:textSize="20sp"
-                        android:layout_marginTop="20dp"
-                        android:layout_marginBottom="20dp"
-                        android:textColor="#000000"/>
-
-                </LinearLayout>
-
-                <LinearLayout
-                    android:id="@+id/AuthNotComplete"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:background="#ffffff"
-                    android:orientation="vertical"
-                    android:gravity="center">
-
-                    <TextView
-                        android:id="@+id/textView3"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="left"
-                        android:layout_marginBottom="25dp"
-                        android:layout_marginTop="15dp"
-                        android:layout_marginLeft="15dp"
-                        android:textSize="20sp"
-                        android:text="본인인증" />
-
-                    <com.kakao.usermgmt.LoginButton
-                        android:id="@+id/btn_kakao"
-                        android:layout_width="300dp"
-                        android:layout_height="60dp"/>
-
-                    <com.facebook.login.widget.LoginButton
-                        android:id="@+id/login_button"
-                        android:layout_width="300dp"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center_horizontal"
-                        android:layout_marginTop="30dp"
-                        android:layout_marginBottom="30dp" />
-
-                    <Button
-                        android:id="@+id/button_phone_auth"
-                        android:layout_width="250dp"
-                        android:layout_height="wrap_content"
-                        android:textSize="17sp"
-                        android:backgroundTint="#6d5b97"
-                        android:textColor="#ffffff"
-                        android:text="휴대폰 번호로 인증하기"
-                        android:layout_marginBottom="40dp" />
-
-                </LinearLayout>
-
-            </FrameLayout>
-
-
-
-        </LinearLayout>
-
-    </ScrollView>
+    </TableLayout>
 
 </LinearLayout>
